Import of DAMI/MsOffice-Word-HTML-Writer-0.03 from CPAN.
gitpan-cpan-distribution: MsOffice-Word-HTML-Writer
gitpan-cpan-version:      0.03
gitpan-cpan-path:         DAMI/MsOffice-Word-HTML-Writer-0.03.tar.gz
gitpan-cpan-author:       DAMI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for MsOffice-Word-HTML-Writer
 
+0.03 05.01.2009
+  - forgot Mime::Types in prereq
+
 0.02 01.01.2009
   - Oops, already some bugs (bad calls to Params::Validate)
 
