--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for MsOffice-Word-HTML-Writer
 
+0.04 04.06.2009
+  - fixes on CRLF line endings when generating from Unix
+
 0.03 05.01.2009
   - forgot Mime::Types in prereq
 
