--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for MsOffice-Word-HTML-Writer
 
+0.06 28.07.2010
+  - new arg for new(): WordDocument properties
+
 0.05 14.05.2010
   - better handling of MsWord fields, and new method quote()
 
