Import of DAMI/MsOffice-Word-HTML-Writer-1.01 from CPAN.
gitpan-cpan-distribution: MsOffice-Word-HTML-Writer
gitpan-cpan-version:      1.01
gitpan-cpan-path:         DAMI/MsOffice-Word-HTML-Writer-1.01.tar.gz
gitpan-cpan-author:       DAMI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for MsOffice-Word-HTML-Writer
 
+1.01 29.09.2011
+  - new 'left'/'right' args for page_break() and create_section(new_page=>)
+
 1.00 13.08.2011
   - doc updates
   - bumped to 1.0 and removed the claim that it was "experimental"
